fix spacing in home page in chrome

--- a/components/com_manager/modules/home/css/jmb.home.css
+++ b/components/com_manager/modules/home/css/jmb.home.css
@@ -5,6 +5,7 @@
     font-weight: normal;
     position: relative;
     text-align: center;
+    width: 760px;
 }
 #JMBHomeContainer .jmb-home-logo {
     background: url("../imgs/jmbhomelogo.jpg") no-repeat scroll 0 0 transparent;
